src/objects/Error_Log__c.object
<CustomObject>
    <description>This object is used to log exceptions caught  throughout the application</description>
    <fields>
        <fullName>Class_and_Method__c</fullName>
        <label>Class and Method</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email_Delivery_Result__c</fullName>
        <label>Email Delivery Result</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <label>Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Error Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Record_Id__c</columns>
        <columns>Class_and_Method__c</columns>
        <columns>Stack_Trace__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>